# rainy-aether

./: .gitignore  AETHER_FIXES.md  AGENTS.md  AGENTS_ACTIVATION_GUIDE.md  AGENT_ADVANCED_CONFIG.md  AGENT_ARCHITECTURE.md  AGENT_BEHAVIOR_EVOLUTION.md  AGENT_BEHAVIOR_GUIDE.md  AGENT_IMPLEMENTATION_GUIDE.md  AGENT_MODEL_TIERS.md  AGENT_SYSTEM_DESIGN.md  AGENT_TOOLS_DESIGN.md  AGENT_TOOLS_IMPLEMENTATION_STATUS.md  AGENT_TOOLS_IMPROVEMENTS.md  AGENT_TOOLS_USAGE_GUIDE.md  ARCHITECTURE.md  BREADCRUMBS_INTEGRATION.md  BREADCRUMBS_PATCH.md  CHANGELOG.md  CHATBOT_INTEGRATION_PROGRESS.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONFIGURACION_FUNCIONANDO_COMPLETO.md  CONFIGURATION_SAVE_OPTIMIZATION.md  CONTRIBUTING.md  DEBUG_EXTENSIONS.md  DEVELOPMENT.md  ERRORS.md  GEMINI_CACHE.md  GEMINI_THINKING.md  GEMINI_THOUGHTS.md  GROQ_P.md  LICENCE  LSP_INTEGRATION_COMPLETE.md  MONACO_NAVIGATION_FEATURES.md  NEW_BRAIN_AGENT.md  NEW_BRAIN_V2.md  PRICING_TABLE.md  QUICK_FIX_DEMO.tsx  (+18 more)
.agent/rules/: blur-rules.md  enhanced.md  for-native.md  for-rust.md  multiplatform.md  to-changelog.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: CHATBOT_EXTENSION_API.md  CHAT_MESSAGE_TYPES.md  DUAL_AGENT_SYSTEM.md  EXTENSION_CONFIGURATION.md  EXTENSION_QUICKSTART.md  EXTENSION_SYSTEM.md  EXTENSION_SYSTEM_IMPLEMENTATION.md  LANGGRAPH_TESTING_GUIDE.md  LangGraphMigrationPlan.md  MIGRATION.md  MIGRATION_FROM_LEGACY.md  SUBAGENT.md  browser-preview.md  git-integration.md
docs/agents/: ABBY_MODE_GUIDE.md  AGENTKIT_USAGE.md  AGENT_IMPLEMENTATION_GUIDE.md  AGENT_TOOLS_IMPLEMENTATION_STATUS.md  AGENT_TOOLS_USAGE_GUIDE.md  API_KEY_MANAGEMENT.md  HIGH_LEVEL_CODING_AGENT_DESIGN.md  INNGEST_NEW.md  INTEGRATION_TESTING_GUIDE.md  LANGGRAPH_MIGRATION.md  MCP_DOC.md  PHASE_2_3_COMPLETION_GUIDE.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_8_COMPLETION_SUMMARY.md  PHASE_8_IMPLEMENTATION_PLAN.md  PHASE_8_OPTIONAL_FEATURES.md  RAINY_AGENTS_MASTER_PLAN.md  RUST_AGENT_FLOW.md  RUST_TS_INTEGRATION_ANALYSIS.md  THINKING_MODELS_IMPLEMENTATION.md  TOOLS.md  USER_GUIDE.md  llm-agent.txt
docs/configuration/: CONFIGURATION_SYSTEM.md  TYPE_COMPONENT_MAPPING.md
docs/db/: TURSO_DB.md
docs/errors/: ERROR_SYSTEM_IMPLEMENTATION_PLAN.md  ERROR_SYSTEM_OF_VS_CODE.md  FINAL_SUMMARY.md  INTEGRATION_FIXES_2025-11-09.md  PHASE1_IMPLEMENTATION_REPORT.md  (+11 more)
scripts/: test-update-server.js  update-server.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.rainy-aether/agent-history/: 2a84ab99-94ce-4656-a27e-3a474ee67e35.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_server_manager.rs  browser_manager.rs  configuration_manager.rs  credential_manager.rs  extension_manager.rs  extension_registry.rs  file_operations.rs  font_manager.rs  git_auth.rs  git_config.rs  git_manager.rs  git_native.rs  help_manager.rs  icon_theme_manager.rs  language_server_manager.rs  language_server_manager_improved.rs  lib.rs  main.rs  main.tsx  menu_manager.rs  project_manager.rs  terminal_manager.rs  theme_manager.rs  update_manager.rs  window_manager.rs
src-tauri/src/agents/: commands.rs  core.rs  executor.rs  inference.rs  memory.rs  metrics.rs  mod.rs  rate_limiter.rs
src-tauri/src/agents/providers/: base.rs  google.rs  groq.rs  mod.rs
src-tauri/src/agents/tools/: filesystem.rs  git.rs  mod.rs  registry.rs  terminal.rs  workspace.rs
src-tauri/src/docs/: LANGUAGE_SERVER_MANAGER.md
src-tauri/src/git/: auth.rs  branch.rs  commit.rs  error.rs  history.rs  merge.rs  mod.rs  remote.rs  stash.rs  status.rs  types.rs
src-tauri/src/state_manager/: mod.rs  session_state.rs
src/css/: IDE.css  (+11 more)
(+455 files in other folders)
