[package]
name = "rainy-aether"
version = "0.1.21"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rainy_coder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[dependencies]
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2.4.0"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = { version = "2.4.4", features = ["watch"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-updater = "2.9.0"
notify = "8.2.0"
portable-pty = "0.9.0"
uuid = { version = "0.8.2", features = ["v4"] }
tauri-plugin-pty = "0.1.1"
dirs = "5"
zip = "6.0.0"
which = "8.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
keyring = "3.6.3"
git2 = "0.20.2"
walkdir = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
regex = "1.10"
base64 = "0.22"
turso = "0.3.2"
once_cell = "1.21.3"
hostname = "0.4"
num_cpus = "1.16"
urlencoding = "2.1"
rayon = "1.11.0"
lsp-types = "0.97.0"
ignore = "0.4.20"
lru = "0.16.2"
openssl = { version = "0.10", features = ["vendored"] }

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.0"

[target."cfg(windows)".dependencies]
windows = { version = "0.58", features = ["Win32_System_SystemInformation"] }
